k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: production
spec:
  selector:
    app: app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
